--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 13:05:04 2018</p>
+         Last Run: Fri Jul 27 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
                         <td>41</td>
                         <td>4</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>10</td>
+                        <td>SW</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -50,30 +50,30 @@
                         <td>5</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>15</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>2</td>
                         <td>33</td>
                         <td>6</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>20</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
-                        <td>31</td>
+                        <td>3</td>
+                        <td>32</td>
                         <td>7</td>
-                        <td>8</td>
-                        <td>E</td>
+                        <td>10</td>
+                        <td>ESE</td>
                         <td>26</td>
                      </tr>
                      <tr>
@@ -81,11 +81,11 @@
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>31</td>
                         <td>6</td>
-                        <td>10</td>
-                        <td>E</td>
+                        <td>8</td>
+                        <td>ENE</td>
                         <td>27</td>
                      </tr>
                   </tbody>
@@ -132,9 +132,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "21",
                  "23",
-                 "24",
+                 "23",
                  "24",
                  "24"
                ]
@@ -145,9 +145,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "21",
                  "23",
-                 "24",
+                 "23",
                  "24",
                  "24"
                ]
@@ -205,8 +205,8 @@
                  "0",
                  "0",
                  "2",
-                 "2",
-                 "1"
+                 "3",
+                 "2"
                ]
              },
              {
@@ -217,7 +217,7 @@
                  "41",
                  "36",
                  "33",
-                 "31",
+                 "32",
                  "31"
                ]
              },
@@ -226,9 +226,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "15",
-                 "20",
+                 "12",
+                 "19",
+                 "22",
                  "26",
                  "27"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 13:05:04 2018</p>
+         Last Run: Fri Jul 27 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,26 +269,26 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>49</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -296,23 +296,23 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>2</td>
-                        <td>63</td>
+                        <td>1</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>52</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -357,8 +357,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "24",
                  "23",
-                 "22",
                  "22",
                  "20"
                ]
@@ -369,8 +369,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "24",
                  "23",
-                 "22",
                  "22",
                  "20"
                ]
@@ -427,7 +427,7 @@
                  "0",
                  "0",
                  "0",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -435,10 +435,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
+                 "49",
+                 "50",
                  "53",
-                 "56",
-                 "63"
+                 "61"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "54",
-                 "53",
-                 "52"
+                 "48",
+                 "49",
+                 "50",
+                 "50"
                ]
              }
            ]
