--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 15:05:04 2018</p>
+         Last Run: Fri Jul 27 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -34,19 +34,19 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>4</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>5</td>
                         <td>6</td>
                         <td>ESE</td>
@@ -55,36 +55,36 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>2</td>
-                        <td>33</td>
-                        <td>6</td>
-                        <td>6</td>
-                        <td>E</td>
                         <td>24</td>
+                        <td>24</td>
+                        <td>0</td>
+                        <td>32</td>
+                        <td>6</td>
+                        <td>6</td>
+                        <td>ESE</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
-                        <td>32</td>
+                        <td>1</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>25</td>
+                        <td>ESE</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>1</td>
-                        <td>31</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>2</td>
+                        <td>30</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>ENE</td>
                         <td>25</td>
                      </tr>
@@ -133,10 +133,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "22",
                  "23",
                  "24",
-                 "24"
+                 "24",
+                 "25"
                ]
              },
              {
@@ -146,10 +146,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "22",
                  "23",
                  "24",
-                 "24"
+                 "24",
+                 "25"
                ]
              }
            ]
@@ -204,9 +204,9 @@
                "data":[
                  "0",
                  "0",
-                 "2",
-                 "2",
-                 "1"
+                 "0",
+                 "1",
+                 "2"
                ]
              },
              {
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "37",
-                 "33",
+                 "41",
+                 "36",
                  "32",
-                 "31"
+                 "31",
+                 "30"
                ]
              },
              {
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
+                 "10",
                  "20",
-                 "24",
-                 "25",
+                 "22",
+                 "23",
                  "25"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 15:05:04 2018</p>
+         Last Run: Fri Jul 27 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -300,7 +300,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -308,11 +308,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>2</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -438,7 +438,7 @@
                  "49",
                  "51",
                  "54",
-                 "61"
+                 "62"
                ]
              },
              {
@@ -448,8 +448,8 @@
                "data":[
                  "50",
                  "50",
-                 "50",
-                 "50"
+                 "51",
+                 "51"
                ]
              }
            ]
