--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 18:05:04 2018</p>
+         Last Run: Fri Jul 27 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>4</td>
                         <td>6</td>
-                        <td>S</td>
-                        <td>4</td>
+                        <td>SSW</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>5</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>19</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
                         <td>6</td>
                         <td>E</td>
@@ -69,24 +69,24 @@
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>1</td>
-                        <td>30</td>
+                        <td>2</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>ESE</td>
+                        <td>E</td>
                         <td>24</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>2</td>
                         <td>30</td>
                         <td>6</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>27</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,11 +132,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "21",
                  "22",
-                 "23",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -145,11 +145,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "21",
                  "22",
-                 "23",
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -205,7 +205,7 @@
                  "0",
                  "0",
                  "0",
-                 "1",
+                 "2",
                  "2"
                ]
              },
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
-                 "36",
-                 "32",
-                 "30",
+                 "42",
+                 "37",
+                 "33",
+                 "31",
                  "30"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "19",
+                 "5",
+                 "21",
                  "19",
                  "24",
-                 "27"
+                 "25"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 18:05:04 2018</p>
+         Last Run: Fri Jul 27 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,14 +269,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
                         <td>49</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -288,7 +288,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -300,7 +300,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -311,7 +311,7 @@
                         <td>61</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>53</td>
                      </tr>
                   </tbody>
@@ -357,7 +357,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "24",
                  "23",
                  "22",
                  "20"
@@ -369,7 +369,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "24",
                  "23",
                  "22",
                  "20"
@@ -446,9 +446,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "57",
+                 "56",
                  "54",
-                 "54",
-                 "52",
                  "53"
                ]
              }
