--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 19:05:04 2018</p>
+         Last Run: Fri Jul 27 20:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -36,9 +36,9 @@
                         <td>0</td>
                         <td>42</td>
                         <td>4</td>
-                        <td>6</td>
-                        <td>SSW</td>
                         <td>5</td>
+                        <td>SSW</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>5</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>21</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -61,15 +61,15 @@
                         <td>33</td>
                         <td>6</td>
                         <td>6</td>
-                        <td>E</td>
-                        <td>19</td>
+                        <td>ESE</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>31</td>
                         <td>7</td>
                         <td>8</td>
@@ -86,7 +86,7 @@
                         <td>6</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>25</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -205,7 +205,7 @@
                  "0",
                  "0",
                  "0",
-                 "2",
+                 "1",
                  "2"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "21",
-                 "19",
+                 "9",
+                 "25",
+                 "25",
                  "24",
-                 "25"
+                 "27"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 19:05:04 2018</p>
+         Last Run: Fri Jul 27 20:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,14 +269,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
                         <td>49</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -288,7 +288,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -298,9 +298,9 @@
                         <td>0</td>
                         <td>53</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -308,11 +308,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -357,7 +357,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
+                 "23",
                  "23",
                  "22",
                  "20"
@@ -369,7 +369,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
+                 "23",
                  "23",
                  "22",
                  "20"
@@ -438,7 +438,7 @@
                  "49",
                  "51",
                  "53",
-                 "61"
+                 "60"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
                  "56",
-                 "54",
-                 "53"
+                 "55",
+                 "53",
+                 "52"
                ]
              }
            ]
