--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 20:05:07 2018</p>
+         Last Run: Fri Jul 27 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>4</td>
-                        <td>5</td>
-                        <td>SSW</td>
-                        <td>9</td>
+                        <td>6</td>
+                        <td>S</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>5</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>6</td>
                         <td>ESE</td>
@@ -74,19 +74,19 @@
                         <td>7</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>24</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>2</td>
                         <td>30</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>27</td>
+                        <td>ENE</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,11 +132,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
                  "22",
+                 "23",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              },
              {
@@ -145,11 +145,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
                  "22",
+                 "23",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              }
            ]
@@ -214,9 +214,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "37",
-                 "33",
+                 "41",
+                 "36",
+                 "32",
                  "31",
                  "30"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "25",
-                 "25",
+                 "8",
                  "24",
-                 "27"
+                 "25",
+                 "25",
+                 "25"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 20:05:07 2018</p>
+         Last Run: Fri Jul 27 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -276,7 +276,7 @@
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -298,7 +298,7 @@
                         <td>0</td>
                         <td>53</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>ESE</td>
                         <td>53</td>
                      </tr>
@@ -446,7 +446,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "55",
                  "53",
                  "52"
